sparrow-engine/include/sparrow_engine.h


typedef void SparrowEngine;
typedef void SparrowEngineModel;
typedef struct SparrowEngineDetection {
  struct SparrowEngineBBox bbox;
  const char *label;
  uint32_t label_id;
  float confidence;
} SparrowEngineDetection;
typedef struct SparrowEngineDetections {
  const struct SparrowEngineDetection *data;
  uintptr_t len;
  uint32_t image_width;
  uint32_t image_height;
} SparrowEngineDetections;
typedef struct SparrowEngineDetectOpts {
  float confidence_threshold;
  uint32_t max_detections;
} SparrowEngineDetectOpts;
typedef uint32_t SparrowEnginePixelFormat;
typedef struct SparrowEngineClassification {
  const char *label;
  uint32_t label_id;
  float confidence;
} SparrowEngineClassification;
typedef struct SparrowEngineClassifyResult {
  const char *label;
  uint32_t label_id;
  float confidence;
  const struct SparrowEngineClassification *top_results;
  uintptr_t top_results_len;
  uint32_t image_width;
  uint32_t image_height;
  float processing_time_ms;
} SparrowEngineClassifyResult;
typedef struct SparrowEngineClassifyOpts {
  uint32_t top_k;
} SparrowEngineClassifyOpts;
typedef struct SparrowEnginePipelineDetection {
  struct SparrowEngineDetection detection;
  bool has_classification;
  struct SparrowEngineClassification classification;
} SparrowEnginePipelineDetection;
typedef struct SparrowEnginePipelineResult {
  const char *pipeline_id;
  const struct SparrowEnginePipelineDetection *data;
  uintptr_t len;
  uint32_t image_width;
  uint32_t image_height;
  float processing_time_ms;
} SparrowEnginePipelineResult;
typedef struct SparrowEngineAudioSegment {
  float start_time_s;
  float end_time_s;
  float confidence;
} SparrowEngineAudioSegment;
typedef struct SparrowEngineAudioResult {
  const struct SparrowEngineAudioSegment *data;
  uintptr_t len;
  float duration_s;
  uint32_t sample_rate;
  float processing_time_ms;
} SparrowEngineAudioResult;
typedef struct SparrowEngineAudioDetectOpts {
  float confidence_threshold;
  float segment_duration_s;
  float segment_stride_s;
} SparrowEngineAudioDetectOpts;
typedef struct SparrowEngineAudioSegment_v2 {
  float start_time_s;
  float end_time_s;
  float confidence;
  const struct SparrowEngineAudioClass *classes;
  uintptr_t classes_len;
} SparrowEngineAudioSegment_v2;
typedef struct SparrowEngineAudioResult_v2 {
  const struct SparrowEngineAudioSegment_v2 *data;
  uintptr_t len;
  float duration_s;
  uint32_t sample_rate;
  float processing_time_ms;
} SparrowEngineAudioResult_v2;
typedef void (*SparrowEngineAudioSegmentCallback)(const struct SparrowEngineAudioSegment *segment,
                                                  void *user_data);
typedef struct SparrowEngineDayNightResultC {
  int32_t status;
  int32_t is_day;
  float brightness;
} SparrowEngineDayNightResultC;
typedef struct SparrowEngineVerifyResultC {
  int32_t status;
  char *detail;
} SparrowEngineVerifyResultC;
struct SparrowEngineDetections *sparrow_engine_detect(const SparrowEngineModel *model,
                                                      const uint8_t *image,
                                                      uintptr_t len,
                                                      const struct SparrowEngineDetectOpts *opts);
struct SparrowEngineDetections *sparrow_engine_detect_raw(const SparrowEngineModel *model,
                                                          const uint8_t *pixels,
                                                          uint32_t w,
                                                          uint32_t h,
                                                          uint32_t stride,
                                                          SparrowEnginePixelFormat format,
                                                          const struct SparrowEngineDetectOpts *opts);
struct SparrowEngineClassifyResult *sparrow_engine_classify(const SparrowEngineModel *model,
                                                            const uint8_t *image,
                                                            uintptr_t len,
                                                            const struct SparrowEngineClassifyOpts *opts);
struct SparrowEnginePipelineResult *sparrow_engine_run_pipeline(const SparrowEngine *engine,
                                                                const char *pipeline_id,
                                                                const uint8_t *image,
                                                                uintptr_t len,
                                                                const struct SparrowEngineDetectOpts *detect_opts,
                                                                const struct SparrowEngineClassifyOpts *classify_opts);
struct SparrowEngineAudioResult *sparrow_engine_detect_audio(const SparrowEngineModel *model,
                                                             const char *audio_path,
                                                             const struct SparrowEngineAudioDetectOpts *opts);
struct SparrowEngineAudioResult_v2 *sparrow_engine_detect_audio_v2(const SparrowEngineModel *model,
                                                                   const char *audio_path,
                                                                   const struct SparrowEngineAudioDetectOpts *opts);
struct SparrowEngineAudioResult *sparrow_engine_detect_audio_streaming(const SparrowEngineModel *model,
                                                                       const char *audio_path,
                                                                       const struct SparrowEngineAudioDetectOpts *opts,
                                                                       SparrowEngineAudioSegmentCallback callback,
                                                                       void *user_data);
void sparrow_engine_audio_result_free(struct SparrowEngineAudioResult *ptr);
void sparrow_engine_audio_result_v2_free(struct SparrowEngineAudioResult_v2 *ptr);
void sparrow_engine_detections_free(struct SparrowEngineDetections *ptr);
void sparrow_engine_classify_result_free(struct SparrowEngineClassifyResult *ptr);
void sparrow_engine_pipeline_result_free(struct SparrowEnginePipelineResult *ptr);
void sparrow_engine_free_string(char *ptr);
char *sparrow_engine_list_models(const SparrowEngine *engine);
char *sparrow_engine_health(const SparrowEngine *engine);
const char *sparrow_engine_last_error(void);
char *sparrow_engine_hash_file(const char *path);
void sparrow_engine_hash_result_free(char *ptr);
struct SparrowEngineDayNightResultC sparrow_engine_day_night(const uint8_t *image, uintptr_t len);
float sparrow_engine_image_brightness(const uint8_t *image, uintptr_t len);
struct SparrowEngineVerifyResultC *sparrow_engine_verify_model(const char *model_dir,
                                                               const char *model_id);
void sparrow_engine_verify_result_free(struct SparrowEngineVerifyResultC *ptr);
struct SparrowEngineVerifyResultC *sparrow_engine_engine_verify_model(const SparrowEngine *engine,
                                                                      const char *model_id);
char *sparrow_engine_engine_model_info(const SparrowEngine *engine, const char *model_id);
char *sparrow_engine_engine_list_models_extended(const SparrowEngine *engine);