sparrow-engine/sparrow-engine-cpu/NativeMethods.g.cs


        /// <summary>
        ///  Run audio detection with per-segment streaming callback.
        ///
        ///  CPU callback cadence is per-segment: the callback is invoked immediately
        ///  after each detected segment is produced, allowing the caller to update
        ///  progress incrementally.
        ///
        ///  Note: the GPU flavor of this symbol fires callbacks post-detect (after the
        ///  full chunk loop completes) rather than per-segment. Callers writing
        ///  flavor-agnostic UI code should not assume per-segment cadence; see the
        ///  matching doc-comment in `sparrow-engine-gpu/src/ffi.rs`.
        ///
        ///  Returns the complete result (same as `sparrow_engine_detect_audio`).
        ///
        ///  # Safety
        ///  - `model` must be a valid model pointer.
        ///  - `audio_path` must be a valid, non-null, null-terminated UTF-8 path.
        ///  - `opts` may be null (use defaults).
        ///  - `callback` must be a valid function pointer for the duration of this call.
        ///  - `user_data` is passed through to the callback unchanged.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_detect_audio_streaming", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SparrowEngineAudioResult* sparrow_engine_detect_audio_streaming(void* model, byte* audio_path, SparrowEngineAudioDetectOpts* opts, delegate* unmanaged[Cdecl]<SparrowEngineAudioSegment*, void*, void> callback, void* user_data);

        /// <summary>
        ///  Free a `SparrowEngineAudioResult` returned by `sparrow_engine_detect_audio`.
        ///
        ///  # Safety
        ///  `ptr` must be a pointer returned by `sparrow_engine_detect_audio`, or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_audio_result_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void sparrow_engine_audio_result_free(SparrowEngineAudioResult* ptr);

        /// <summary>
        ///  Free a `SparrowEngineAudioResult_v2` returned by `sparrow_engine_detect_audio_v2`.
        ///
        ///  # Safety
        ///  `ptr` must be a pointer returned by `sparrow_engine_detect_audio_v2`, or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_audio_result_v2_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void sparrow_engine_audio_result_v2_free(SparrowEngineAudioResult_v2* ptr);

        /// <summary>
        ///  Free a `SparrowEngineDetections` returned by `sparrow_engine_detect` or `sparrow_engine_detect_raw`.
        ///
        ///  # Safety
        ///  `ptr` must be a pointer returned by `sparrow_engine_detect`/`sparrow_engine_detect_raw`, or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_detections_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void sparrow_engine_detections_free(SparrowEngineDetections* ptr);

        /// <summary>
        ///  Free a `SparrowEngineClassifyResult` returned by `sparrow_engine_classify`.
        ///
        ///  # Safety
        ///  `ptr` must be a pointer returned by `sparrow_engine_classify`, or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_classify_result_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void sparrow_engine_classify_result_free(SparrowEngineClassifyResult* ptr);

        /// <summary>
        ///  Free a `SparrowEnginePipelineResult` returned by `sparrow_engine_run_pipeline`.
        ///
        ///  # Safety
        ///  `ptr` must be a pointer returned by `sparrow_engine_run_pipeline`, or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_pipeline_result_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void sparrow_engine_pipeline_result_free(SparrowEnginePipelineResult* ptr);

        /// <summary>
        ///  Free a string returned by `sparrow_engine_list_models` or `sparrow_engine_health`.
        ///
        ///  # Safety
        ///  `ptr` must be a pointer returned by a sparrow-engine function that allocates strings, or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_free_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void sparrow_engine_free_string(byte* ptr);

        /// <summary>
        ///  List loaded models as a JSON string. Returns null on error.
        ///  Caller must free with `sparrow_engine_free_string`.
        ///
        ///  # Safety
        ///  `engine` must be a valid engine pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_list_models", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* sparrow_engine_list_models(void* engine);

        /// <summary>
        ///  Return engine health as a JSON string. Returns null on error.
        ///  Caller must free with `sparrow_engine_free_string`.
        ///
        ///  # Safety
        ///  `engine` must be a valid engine pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_health", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* sparrow_engine_health(void* engine);

        /// <summary>
        ///  Return the last error message for this thread, or null if no error.
        ///  The returned pointer is valid until the next FFI call on the same thread.
        ///
        ///  # Safety
        ///  Thread-safe. Returned pointer must not be freed by the caller.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_last_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* sparrow_engine_last_error();

        /// <summary>
        ///  Compute SHA-256 hash of a file. Returns hex string or null on error.
        ///  Caller must free with `sparrow_engine_hash_result_free`.
        ///
        ///  # Safety
        ///  `path` must be a valid, non-null, null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_hash_file", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* sparrow_engine_hash_file(byte* path);

        /// <summary>
        ///  Free a hash string returned by `sparrow_engine_hash_file`.
        ///
        ///  # Safety
        ///  `ptr` must be a pointer returned by `sparrow_engine_hash_file`, or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_hash_result_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void sparrow_engine_hash_result_free(byte* ptr);

        /// <summary>
        ///  Classify image as day or night. Returns result by value.
        ///  On error: status=-1, check `sparrow_engine_last_error`.
        ///
        ///  # Safety
        ///  `image` must point to `len` bytes of encoded image data (JPEG/PNG).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_day_night", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SparrowEngineDayNightResultC sparrow_engine_day_night(byte* image, nuint len);

        /// <summary>
        ///  Compute mean image brightness [0,255]. Returns -1.0 on error.
        ///
        ///  # Safety
        ///  `image` must point to `len` bytes of encoded image data (JPEG/PNG).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_image_brightness", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern float sparrow_engine_image_brightness(byte* image, nuint len);

        /// <summary>
        ///  Verify a model's ONNX file against manifest checksums.
        ///  Returns null on error. Caller must free with `sparrow_engine_verify_result_free`.
        ///
        ///  # Safety
        ///  `model_dir` and `model_id` must be valid, non-null, null-terminated UTF-8 strings.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_verify_model", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SparrowEngineVerifyResultC* sparrow_engine_verify_model(byte* model_dir, byte* model_id);

        /// <summary>
        ///  Free a `SparrowEngineVerifyResultC` returned by `sparrow_engine_verify_model` or `sparrow_engine_engine_verify_model`.
        ///
        ///  # Safety
        ///  `ptr` must be a pointer returned by `sparrow_engine_verify_model`/`sparrow_engine_engine_verify_model`, or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_verify_result_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void sparrow_engine_verify_result_free(SparrowEngineVerifyResultC* ptr);

        /// <summary>
        ///  Verify a model using the engine's model directory. Returns null on error.
        ///  Caller must free with `sparrow_engine_verify_result_free`.
        ///
        ///  # Safety
        ///  - `engine` must be a valid engine pointer.
        ///  - `model_id` must be a valid, non-null, null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_engine_verify_model", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SparrowEngineVerifyResultC* sparrow_engine_engine_verify_model(void* engine, byte* model_id);

        /// <summary>
        ///  Get model info as JSON string. Searches loaded models first, then disk.
        ///  Returns null on error. Caller must free with `sparrow_engine_free_string`.
        ///
        ///  # Safety
        ///  - `engine` must be a valid engine pointer.
        ///  - `model_id` must be a valid, non-null, null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_engine_model_info", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* sparrow_engine_engine_model_info(void* engine, byte* model_id);

        /// <summary>
        ///  List all available models (on disk) as JSON array with extended info.
        ///  Includes version, description, and checksums. Returns null on error.
        ///  Caller must free with `sparrow_engine_free_string`.
        ///
        ///  # Safety
        ///  `engine` must be a valid engine pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_engine_list_models_extended", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* sparrow_engine_engine_list_models_extended(void* engine);
